--- a/sbin/mount_lfs/Makefile
+++ b/sbin/mount_lfs/Makefile
@@ -1,9 +1,9 @@
 #	from: @(#)Makefile	8.2 (Berkeley) 3/27/94
-#	$Id: Makefile,v 1.1 1994/06/08 19:15:55 mycroft Exp $
+#	$Id: Makefile,v 1.2 1994/12/22 10:46:06 cgd Exp $
 
 PROG=	mount_lfs
 SRCS=	mount_lfs.c getmntopts.c
-MAN8=	mount_lfs.0
+MAN=	mount_lfs.8
 
 MOUNT=	${.CURDIR}/../mount
 CFLAGS+= -I${MOUNT}
