--- a/external/mit/xorg/lib/freetype/Makefile
+++ b/external/mit/xorg/lib/freetype/Makefile
@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.16 2015/07/20 04:10:40 mrg Exp $
+#	$NetBSD: Makefile,v 1.17 2016/05/16 22:19:10 christos Exp $
 
 .include <bsd.own.mk>
 
@@ -7,6 +7,12 @@ LIB=	freetype
 FREETYPE=	${X11SRCDIR.${LIB}}
 
 SUBDIR=	freetype
+
+.PATH:	${X11SRCDIR.freetype}/include/
+
+INCSDIR=${X11INCDIR}/freetype2
+
+INCS=	ft2build.h
 
 .PATH:	${FREETYPE}/src/base
 SRCS=	ftapi.c ftbase.c ftbbox.c ftbdf.c ftdebug.c ftfntfmt.c ftfstype.c \
@@ -83,7 +89,7 @@ CPPFLAGS+=	-DFT_CONFIG_OPTION_SYSTEM_ZLIB \
 		-DFT2_BUILD_LIBRARY \
 		-DFT_CONFIG_MODULES_H="<ftmodule.h>"
 CPPFLAGS+=	-I${DESTDIR}${X11INCDIR}/freetype2 \
-		-I${DESTDIR}${X11INCDIR}/freetype2/config \
+		-I${DESTDIR}${X11INCDIR}/freetype2/freetype/config \
 		-I${X11SRCDIR.${LIB}}/include
 
 .if !defined(MKSUBPIXEL) || ${MKSUBPIXEL} != "no"
