--- a/external/mit/xorg/lib/freetype/freetype/Makefile
+++ b/external/mit/xorg/lib/freetype/freetype/Makefile
@@ -1,12 +1,12 @@
-#	$NetBSD: Makefile,v 1.21 2016/03/21 05:23:39 dholland Exp $
+#	$NetBSD: Makefile,v 1.22 2016/05/16 22:19:10 christos Exp $
 
 .include <bsd.own.mk>
 
 SUBDIR=	config
 
-.PATH:	${X11SRCDIR.freetype}/include
+.PATH:	${X11SRCDIR.freetype}/include/freetype
 
-INCSDIR=${X11INCDIR}/freetype2
+INCSDIR=${X11INCDIR}/freetype2/freetype
 
 INCS=	freetype.h ftadvanc.h ftbbox.h ftbdf.h ftbitmap.h ftbzip2.h ftcache.h \
 	ftchapters.h ftcid.h fterrdef.h fterrors.h ftfntfmt.h ftgasp.h \
@@ -15,7 +15,7 @@ INCS=	freetype.h ftadvanc.h ftbbox.h ftbdf.h ftbitmap.h ftbzip2.h ftcache.h \
 	ftpfr.h ftrender.h ftsizes.h ftsnames.h ftstroke.h ftsynth.h \
 	ftsystem.h fttrigon.h ftttdrv.h fttypes.h ftwinfnt.h \
 	t1tables.h ttnameid.h tttables.h tttags.h ttunpat.h \
-	ftautoh.h ftcffdrv.h ft2build.h
+	ftautoh.h ftcffdrv.h
 
 SCRIPTS=	freetype-config
 
