--- a/external/mit/xorg/lib/freetype/freetype/config/Makefile
+++ b/external/mit/xorg/lib/freetype/freetype/config/Makefile
@@ -1,10 +1,10 @@
-#	$NetBSD: Makefile,v 1.2 2014/03/20 08:57:48 mrg Exp $
+#	$NetBSD: Makefile,v 1.3 2016/05/16 22:19:10 christos Exp $
 
 .include <bsd.own.mk>
 
-.PATH:	${X11SRCDIR.freetype}/include/config
+.PATH:	${X11SRCDIR.freetype}/include/freetype/config
 
-INCSDIR=${X11INCDIR}/freetype2/config
+INCSDIR=${X11INCDIR}/freetype2/freetype/config
 
 INCS=	ftconfig.h ftheader.h ftmodule.h ftoption.h ftstdlib.h
 
