--- a/tests/net/bpfjit/Makefile
+++ b/tests/net/bpfjit/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2014/07/09 13:50:48 alnsn Exp $
+# $NetBSD: Makefile,v 1.5 2016/05/24 10:16:34 hannken Exp $
 #
 
 .include <bsd.own.mk>
@@ -9,6 +9,8 @@ TESTS_C=	t_bpfjit
 TESTS_C+=	t_cop
 TESTS_C+=	t_extmem
 TESTS_C+=	t_mbuf
+
+PAXCTL_FLAGS=	+m
 
 LDADD+=		-lrumpnet_bpfjit -lrumpkern_sljit
 LDADD+=		-lrumpdev_bpf -lrumpnet_net -lrumpnet
