--- a/external/gpl3/gcc/lib/libasan/Makefile
+++ b/external/gpl3/gcc/lib/libasan/Makefile
@@ -57,6 +57,7 @@ sanitizer_posix.cc \
 sanitizer_posix_libcdep.cc \
 sanitizer_printf.cc \
 sanitizer_procmaps_common.cc \
+sanitizer_procmaps_netbsd.cc \
 sanitizer_procmaps_freebsd.cc \
 sanitizer_procmaps_linux.cc \
 sanitizer_procmaps_mac.cc \
