--- a/external/gpl3/gcc/lib/libasan/Makefile
+++ b/external/gpl3/gcc/lib/libasan/Makefile
@@ -89,6 +89,9 @@ CPPFLAGS+=-D_DEBUG -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMI
 LIBDPLIBS+=    stdc++ ${.CURDIR}/../libstdc++-v3
 LIBDPLIBS+=    pthread ${.CURDIR}/../../../../../lib/libpthread
 COPTS+=-std=gnu++11 -fsized-deallocation -fvisibility=hidden
+COPTS+=-fno-builtin -fno-exceptions -fno-rtti-funwind-tables
+# Can't profile without it`
+#-fomit-frame-pointer
 
 .if ${MACHINE_ARCH} == "vax"
 COPTS.asan_allocator2.cc += -O1
