fix PR 48928:  build the static libX11 properly.  pull in the ximcp, xlcDef, xlcUTF8Load, xlibi18n, and xomGeneric modules directly.
also, don't include bsd.lib.mk in the fragment parts for these
modules, but in the module build itself.  otherwise, bsd.lib.mk
is included before SRCS is complete and the build strangely
seems to miss parts listed.

tested using the example in the PR.

--- a/external/mit/xorg/lib/libX11/Makefile.ximcp
+++ b/external/mit/xorg/lib/libX11/Makefile.ximcp
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.ximcp,v 1.2 2008/10/06 16:24:33 tron Exp $
+# $NetBSD: Makefile.ximcp,v 1.3 2016/06/02 22:41:26 mrg Exp $
 
 .PATH:	${X11SRCDIR.X11}/modules/im/ximcp
 SRCS.ximcp= \
@@ -43,5 +43,3 @@ CPPFLAGS.imDefLkup.c=	-Wno-error
 CPPFLAGS.imRm.c=	-Wno-error
 CPPFLAGS.imTrans.c=	-Wno-error
 CPPFLAGS.imLcLkup.c=	-Wno-stack-protector
-
-.include <bsd.lib.mk>
