--- a/external/mit/xorg/lib/libX11/Makefile.xlcDef
+++ b/external/mit/xorg/lib/libX11/Makefile.xlcDef
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.xlcDef,v 1.1 2008/09/07 13:15:11 rtr Exp $
+# $NetBSD: Makefile.xlcDef,v 1.2 2016/06/02 22:41:26 mrg Exp $
 
 .PATH:		${X11SRCDIR.X11}/modules/lc/def
 SRCS.xlcDef=	lcDefConv.c
@@ -9,5 +9,3 @@ CPPFLAGS+= \
 
 CPPFLAGS+= \
 	-DHASXDMAUTH
-
-.include <bsd.lib.mk>
