--- a/external/mit/xorg/lib/libX11/Makefile.xlcUTF8Load
+++ b/external/mit/xorg/lib/libX11/Makefile.xlcUTF8Load
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.xlcUTF8Load,v 1.1 2008/09/07 13:15:11 rtr Exp $
+# $NetBSD: Makefile.xlcUTF8Load,v 1.2 2016/06/02 22:41:26 mrg Exp $
 
 .PATH:	${X11SRCDIR.X11}/modules/lc/Utf8
 
@@ -11,5 +11,3 @@ CPPFLAGS+= \
 
 CPPFLAGS+= \
 	-DHASXDMAUTH
-
-.include <bsd.lib.mk>
