--- a/external/mit/xorg/lib/libX11/Makefile.xlibi18n
+++ b/external/mit/xorg/lib/libX11/Makefile.xlibi18n
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.xlibi18n,v 1.1 2008/09/07 13:15:11 rtr Exp $
+# $NetBSD: Makefile.xlibi18n,v 1.2 2016/06/02 22:41:26 mrg Exp $
 
 .PATH:		${X11SRCDIR.X11}/modules/lc/gen
 SRCS.xlibi18n=	lcGenConv.c
@@ -10,5 +10,3 @@ CPPFLAGS+= \
 CPPFLAGS+= \
 	${XLOCALE.DEFINES} \
 	-DHASXDMAUTH
-
-.include <bsd.lib.mk>
