--- a/external/mit/xorg/lib/libX11/Makefile.xomGeneric
+++ b/external/mit/xorg/lib/libX11/Makefile.xomGeneric
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.xomGeneric,v 1.1 2008/09/07 13:15:11 rtr Exp $
+# $NetBSD: Makefile.xomGeneric,v 1.2 2016/06/02 22:41:26 mrg Exp $
 
 .PATH:		${X11SRCDIR.X11}/modules/om/generic
 
@@ -19,5 +19,3 @@ CPPFLAGS+= \
 
 CPPFLAGS+= \
 	-DHASXDMAUTH
-
-.include <bsd.lib.mk>
