--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.243 2016/06/04 02:06:46 christos Exp $
+#	$NetBSD: Makefile,v 1.244 2016/06/05 01:20:58 christos Exp $
 #	from: @(#)Makefile	5.25.1.1 (Berkeley) 5/7/91
 
 .include <bsd.own.mk>
@@ -172,10 +172,8 @@ SUBDIR+=	../external/gpl3/${EXTERNAL_GCC_SUBDIR}/lib/libsupc++
 #==================== 2nd library dependency barrier ====================
 SUBDIR+=	.WAIT
 
-SANITIZER_DIR=../external/gpl3/${EXTERNAL_GCC_SUBDIR}/lib/libasan
-.if exists(${SANITIZER_DIR})
-SUBDIR+=	${SANITIZER_DIR}
-.endif
+SUBDIR+= ../external/gpl3/${EXTERNAL_GCC_SUBDIR}/lib/libasan
+SUBDIR+= ../external/gpl3/${EXTERNAL_GCC_SUBDIR}/lib/libubsan
 
 SUBDIR+=	../external/bsd/libarchive/lib	# depends on libxz
 
